--- a/index.html
+++ b/index.html
@@ -1,1 +1,26 @@
-Hello World
+<html>
+  <head>
+    <title>Stardust Published Assets 3ca9879
+</title>
+  </head>
+  <body>
+    <h1>Stardust 3ca9879
+</h1>
+    <table>
+      <thead>
+        <tr>
+          <td>Filename</td>
+          <td>Download</td>
+        </tr>
+      </thead>
+      <tr>
+        <td>stardust.json</td>
+        <td><a href="mod/stardust.json" download>Download</a></td>
+      </tr>
+      <tr>
+        <td>data.json (v{%REVISION%})</td>
+        <td><a href="data.json" download>Download</a></td>
+      </tr>
+    </table>
+  </body>
+</html>
