--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       <thead>
         <tr>
           <td>Filename</td>
-          <td>Download</td>
+          <td>Link</td>
         </tr>
       </thead>
       <tr>
@@ -16,7 +16,7 @@
         <td><a href="mod/stardust.json" download>Download</a></td>
       </tr>
       <tr>
-        <td>data.json (v{%REVISION%})</td>
+        <td>data.json</td>
         <td><a href="data.json" download>Download</a></td>
       </tr>
     </table>
