deploy: 379c9eada07d325a30baaa7e4ce95b631401f543

--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <html>
   <head>
-    <title>Stardust Published Assets 3ca9879
+    <title>Stardust Published Assets 379c9ea
 </title>
   </head>
   <body>
-    <h1>Stardust 3ca9879
+    <h1>Stardust 379c9ea
 </h1>
     <table>
       <thead>
         <tr>
           <td>Filename</td>
-          <td>Download</td>
+          <td>Link</td>
         </tr>
       </thead>
       <tr>
@@ -18,7 +18,7 @@
         <td><a href="mod/stardust.json" download>Download</a></td>
       </tr>
       <tr>
-        <td>data.json (v{%REVISION%})</td>
+        <td>data.json</td>
         <td><a href="data.json" download>Download</a></td>
       </tr>
     </table>
