--- a/modules/Stardust.Silouhette.767062.html
+++ b/modules/Stardust.Silouhette.767062.html
@@ -30,10 +30,6 @@
   <li><a href="../index.html">Index</a></li>
 </ul>
 
-<h2>Contents</h2>
-<ul>
-<li><a href="#Fields">Fields</a></li>
-</ul>
 
 
 <h2>Modules</h2>
@@ -43,11 +39,11 @@
   <li><a href="../modules/Demo_Controller.html">Demo_Controller</a></li>
   <li><a href="../modules/Formation_Controller.html">Formation_Controller</a></li>
   <li><a href="../modules/Miniature.html">Miniature</a></li>
-  <li><strong>Move_Unit_Here</strong></li>
+  <li><a href="../modules/Move_Unit_Here.html">Move_Unit_Here</a></li>
   <li><a href="../modules/Movement_Controller.html">Movement_Controller</a></li>
   <li><a href="../modules/Order_Token.html">Order_Token</a></li>
   <li><a href="../modules/Play_Area.html">Play_Area</a></li>
-  <li><a href="../modules/Stardust.Silouhette.767062.html">Stardust.Silouhette.767062</a></li>
+  <li><strong>Stardust.Silouhette.767062</strong></li>
   <li><a href="../modules/Spawn_Controller.html">Spawn_Controller</a></li>
   <li><a href="../modules/Target_Controller.html">Target_Controller</a></li>
 </ul>
@@ -56,55 +52,23 @@
 
 <div id="content">
 
-<h1>Module <code>Move_Unit_Here</code></h1>
-<p>A model that projects a ghost miniature to move another miniature to.</p>
+<h1>Module <code>Stardust.Silouhette.767062</code></h1>
+<p>Allows querying if this object is a silouhette.</p>
 <p>
 
- Projects UI that, when interacted with, moves the provided model (by GUID).
-
- Expects a GUID to be provided via the field 'setupUnitProxy`:
-
 </p>
-    <h3>See also:</h3>
-    <ul>
-    </ul>
-
-
-<h2><a href="#Fields">Fields</a></h2>
-<table class="function_list">
-	<tr>
-	<td class="name" nowrap><a href="#setUpUnitProxy">setUpUnitProxy</a></td>
-	<td class="summary">A GUID that is expected to be setup in order to display relevant UI.</td>
-	</tr>
-</table>
-
-<br/>
-<br/>
-
-
-    <h2 class="section-header "><a name="Fields"></a>Fields</h2>
-
-    <dl class="function">
-    <dt>
-    <a name = "setUpUnitProxy"></a>
-    <strong>setUpUnitProxy</strong>
-    </dt>
-    <dd>
-    A GUID that is expected to be setup in order to display relevant UI.
-
-
-
-
-
-
-
     <h3>Usage:</h3>
     <ul>
-        <pre class="example">token.setTable(<span class="string">'setupUnitProxy'</span>, <span class="string">'abc123'</span>)</pre>
+        <pre class="example">someModel.getVar(&apos;IS_SILOUHETTE&apos;)
+</pre>
     </ul>
 
-</dd>
-</dl>
+
+
+<br/>
+<br/>
+
+
 
 
 </div> <!-- id="content" -->
